--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "main": "./dist/duguit-shared-library.umd.cjs",
+  "module": "dist/duguit-shared-library.js",
   "scripts": {
     "dev": "vite --host=0.0.0.0 --port=3002",
     "test": "vitest",
