--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,6 +11,9 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationDir": "./dist/types",
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
