--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "type": "module",
-  "main": "./dist/duguit-shared-library.umd.cjs",
-  "module": "dist/duguit-shared-library.js",
+  "main": "./dist/src/index.js",
+  "module": "./dist/duguit-shared-library.js",
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "dev": "vite --host=0.0.0.0 --port=3002",
