--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -5,6 +5,7 @@
     "declaration": true,               // Générer les .d.ts
     "declarationDir": "./dist/types",  // Où placer les .d.ts
     "outDir": "./dist",                // Dossier de sortie pour le JS émis
+    "rootDir": "./src",
     "composite": true,                 // Pour les builds incrémentaux (optionnel)
     "resolveJsonModule": true,    // Active la résolution des imports JSON
     "esModuleInterop": true
