--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "peerDependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
