--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "dev": "vite --host=0.0.0.0 --port=3002",
     "test": "vitest",
     "preview": "vite preview",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "type-check": "vue-tsc --build tsconfig.lib.json --force",
-    "build-only": "vite build"
+    "build": "rimraf dist && vue-tsc --noEmit && tsc --build tsconfig.lib.json --force && vite build"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -22,9 +20,9 @@
   },
   "peerDependencies": {
     "pinia": "^2.1.7",
+    "tailwindcss": "^3.4.13",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "tailwindcss": "^3.4.13"
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
@@ -37,6 +35,7 @@
     "jsdom": "^26.0.0",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
     "vite": "^6.2.6",
