--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,18 +1,23 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "noEmit": false,                   // On veut bien émettre les fichiers
-    "declaration": true,               // Générer les .d.ts
-    "declarationDir": "./dist/types",  // Où placer les .d.ts
-    "outDir": "./dist",                // Dossier de sortie pour le JS émis
+    "noEmit": false,
+    "declaration": true,
+    "declarationDir": "./dist/types",
+    "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true,                 // Pour les builds incrémentaux (optionnel)
-    "resolveJsonModule": true,    // Active la résolution des imports JSON
-    "esModuleInterop": true
+    "composite": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    // (Facultatif) "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.lib.tsbuildinfo"
   },
   "include": [
     "src/**/*",
+    "src/shims-vue.d.ts",
     "vite-env.d.ts",
     "src/**/*.json"
-  ]
+  ],
+  "exclude": ["src/**/__tests__/*", "**/*.spec.ts", "**/*.test.ts"]
 }
