--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.13 || ^4.1.7",
     "typescript": "~5.4.0",
     "vite": "^6.2.6",
     "vitest": "^3.0.2",
