--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "peerDependencies": {
     "pinia": "^2.1.7",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.13 || ^4.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
